@@ -2,6 +2,9 @@ Changes from jTDS 0.9
 =========================
 
 12/03/2004 - Alin Sinpalean
+ o Modified BlobImpl.getBytes() and ClobImpl.getString() to return as much data
+   as available instead of throwing an SQLException if the length parameter is
+   too big (this is my understanding of the API documentation).
  o Removed ColData from CVS (forgot to do it when applying the patch).
  o Applied Mike's patch [1077886] XA Emulation mode.
 
